adding wrangle file exercises

--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7e954a5d",
+   "id": "a06e4e86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e6fdaf24",
+   "id": "65b60fe2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b36e8ad",
+   "id": "ed70311f",
    "metadata": {},
    "source": [
     "# <font color=“brown”>Goal</font>\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77220955",
+   "id": "6b5ad998",
    "metadata": {},
    "source": [
     "# Acquisition"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "04d8f328",
+   "id": "b2687582",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68dc8389",
+   "id": "c7cbb245",
    "metadata": {},
    "source": [
     "**The columns I need**\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "70b759ec",
+   "id": "5de8d495",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "121d34a5",
+   "id": "4664de2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2a12904c",
+   "id": "fd311a69",
    "metadata": {
     "scrolled": true
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "164ae756",
+   "id": "bb226bad",
    "metadata": {},
    "source": [
     "# Cleaning"
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1e06f9b3",
+   "id": "bbbf4c9a",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f026215d",
+   "id": "9539ee70",
    "metadata": {
     "scrolled": true
    },
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d37e90b8",
+   "id": "1afa2cd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,8 +353,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "256b3a34",
+   "execution_count": 9,
+   "id": "3155e324",
    "metadata": {
     "scrolled": true
    },
@@ -373,7 +373,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,8 +386,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "389111e2",
+   "execution_count": 10,
+   "id": "2018b034",
    "metadata": {
     "scrolled": false
    },
@@ -507,7 +507,7 @@
        "[2152863 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,8 +519,136 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "618ee34a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6037.0    1431811\n",
+       "6059.0     555077\n",
+       "6111.0     165975\n",
+       "Name: fips, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "properties_2017.fips.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "839a0ffb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1200.0     5195\n",
+       "1080.0     4389\n",
+       "1120.0     4362\n",
+       "1400.0     3833\n",
+       "1440.0     3690\n",
+       "           ... \n",
+       "10613.0       1\n",
+       "9360.0        1\n",
+       "10238.0       1\n",
+       "13748.0       1\n",
+       "24920.0       1\n",
+       "Name: calculatedfinishedsquarefeet, Length: 10580, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "properties_2017.calculatedfinishedsquarefeet.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e106fd79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1955.0    84405\n",
+       "1950.0    71693\n",
+       "1954.0    69163\n",
+       "1953.0    62342\n",
+       "1956.0    61942\n",
+       "          ...  \n",
+       "1823.0        1\n",
+       "1855.0        1\n",
+       "1879.0        1\n",
+       "1840.0        1\n",
+       "1874.0        1\n",
+       "Name: yearbuilt, Length: 153, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "properties_2017.yearbuilt.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d1b82b9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "450000.0     821\n",
+       "500000.0     779\n",
+       "400000.0     729\n",
+       "430000.0     690\n",
+       "440000.0     685\n",
+       "            ... \n",
+       "3713490.0      1\n",
+       "1314828.0      1\n",
+       "1166747.0      1\n",
+       "1289528.0      1\n",
+       "536061.0       1\n",
+       "Name: taxvaluedollarcnt, Length: 592269, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "properties_2017.taxvaluedollarcnt.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c96ac04e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "id": "1096e28c",
+   "id": "506b1f83",
    "metadata": {},
    "source": [
     "## Takeaways\n",
@@ -530,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "970e12ac",
+   "id": "bd50c532",
    "metadata": {},
    "source": [
     "**Description of columns**\n",
@@ -546,16 +674,18 @@
     "    - fips: Federal Information Processing System (number that uniquely identify geographic areas)\n",
     "\n",
     "**Cleaning process**\n",
-    "* fips and propertylandusetypeid can be dropped because they are identifiers and will not affect the processing of the data\n",
+    "* propertylandusetypeid can be dropped because it is an identifier and will not affect the processing of the data\n",
     "* Some columns (calculatedfinishedsquarefeet, taxvaluedollarcnt, ) need to be renamed for better readability\n",
     "* The null values all together account for 0.01% of the entire dataset. They can be dropped without affecting modeling\n",
-    "* bedroomcnt, bathroomcnt, yearbuilt are a float and needs to be converted into int64"
+    "* bedroomcnt, bathroomcnt, yearbuilt are a float and needs to be converted into int64\n",
+    "* There seems to be an enormous gap between the values which means a lot of outliers as in the case of yearbuilt, calculatedfinishedsquarefeet, and taxvaluedollarcnt for instance. plotting histograms could help figure out the distribution\n",
+    "* "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "271d567b",
+   "id": "881ddac1",
    "metadata": {
     "scrolled": true
    },
@@ -583,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3f82e2a7",
+   "id": "5fbc3687",
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a9826945",
+   "id": "b49afa02",
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c57780fd",
+   "id": "bc2ff6c1",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "cff1b75c",
+   "id": "9269be5b",
    "metadata": {},
    "outputs": [
     {
@@ -974,11 +1104,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "092d4ffa",
+   "id": "e4237e37",
    "metadata": {},
    "outputs": [],
    "source": [
     "houses.astype(dtype, copy=True, errors='raise')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d8f1fd2",
+   "metadata": {},
+   "source": [
+    "## How to handle 0 bedrooms and bathrooms"
    ]
   }
  ],
