finishing wrangle file exercises and compiling code in wrangle.py file

--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c625efa2",
+   "id": "f6196c52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9c04267f",
+   "id": "9b7e1383",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,17 +31,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e71a43d",
+   "id": "ad853aa0",
    "metadata": {},
    "source": [
     "# <font color=“brown”>Goal</font>\n",
     "\n",
-    "**My goal is to predict the values of single unit properties using the obervations from 2017**"
+    "**My goal is to predict the values of single unit properties using the obervations from 2017 AKA the column  taxvaluedollarcnt rrenamed into TAXVALUE**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9772cc69",
+   "id": "f33e7325",
    "metadata": {},
    "source": [
     "# Acquisition"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d6e0fedf",
+   "id": "15afcb0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "924b54c8",
+   "id": "e5e48b09",
    "metadata": {},
    "source": [
     "**The columns I need**\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4aaf98a1",
+   "id": "f4656709",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "393ec185",
+   "id": "5eb69705",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "139e3873",
+   "id": "567514b9",
    "metadata": {
     "scrolled": true
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9021e486",
+   "id": "774355f4",
    "metadata": {},
    "source": [
     "# Cleaning"
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f933d906",
+   "id": "cb0d0dc6",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "49fb48c3",
+   "id": "6b1bc9ff",
    "metadata": {
     "scrolled": true
    },
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3075db24",
+   "id": "4290f8d0",
    "metadata": {
     "scrolled": true
    },
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "727c5b0c",
+   "id": "0a9ef40b",
    "metadata": {
     "scrolled": false
    },
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f3057388",
+   "id": "d4e91c7a",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3a71759f",
+   "id": "5340a0fd",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a4774217",
+   "id": "5269c98e",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4e4f9ef5",
+   "id": "e8bc1a5b",
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c527ce57",
+   "id": "624bbd2f",
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "4ff56eee",
+   "id": "14d7c1b3",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "94634159",
+   "id": "c957455b",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac626fb9",
+   "id": "6e0b8a4e",
    "metadata": {},
    "source": [
     "## Takeaways\n",
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9f8fa37",
+   "id": "7e954410",
    "metadata": {},
    "source": [
     "**Description of columns**\n",
@@ -796,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2201509a",
+   "id": "2b181973",
    "metadata": {
     "scrolled": true
    },
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "46afbf1f",
+   "id": "212b6fa5",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f87c1d52",
+   "id": "cec05968",
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
     }
    ],
    "source": [
-    "# Dropping columns\n",
+    "# Dropping a column\n",
     "\n",
     "houses = houses.drop(['propertylandusetypeid'], axis = 1)\n",
     "houses.head()"
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1b92afce",
+   "id": "2d89a4e4",
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "34de8d28",
+   "id": "11336ade",
    "metadata": {
     "scrolled": true
    },
@@ -1249,7 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8806b5e3",
+   "id": "74da486a",
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1366,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f488f6df",
+   "id": "a31b58b5",
    "metadata": {},
    "outputs": [
     {
@@ -1491,7 +1491,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6def56c9",
+   "id": "a2808205",
    "metadata": {},
    "outputs": [
     {
@@ -1518,8 +1518,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "ba0187fa",
+   "execution_count": 26,
+   "id": "3df683b2",
    "metadata": {
     "scrolled": false
    },
@@ -1669,7 +1669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "817f7e61",
+   "id": "f5d64501",
    "metadata": {},
    "source": [
     "## Takeaways\n",
@@ -1677,54 +1677,364 @@
     "* Set threshhold for outliers in (reference outliers shape in hist):\n",
     "    - bedroomcnt: 8\n",
     "    - bathroomcnt: 9\n",
-    "    - indoor_squarefeet: arbitrary number based on average squarefootage in the US +10% = 3000 sqft\n",
-    "    - taxvalue: associate to the corresponding indoor_squarefeet to see the proportion that is dropped\n",
+    "    - indoor_squarefeet: arbitrary number of 20,000\n",
     "    - taxamount: associate to the corresponding indoor_squarefeet to see the proportion that is dropped\n",
     "* I'll evaluate if the size of the remaining data is significant or not"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7a8f80de",
+   "execution_count": 27,
+   "id": "6d71eed4",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# The proportion of houses that have 8 bedrooms and less\n",
-    "\n",
-    "df[df.bedroomcnt <= 6].shape[0] / df.shape[0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "8f1994ad",
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "21324849.826086957"
+       "0.9997724548939719"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "houses[houses.indoor_squarefeet >= 2_000].taxvalue.mean()"
+    "# The proportion of houses that have 8 bedrooms and less\n",
+    "\n",
+    "houses[houses.bedroomcnt <= 8].shape[0] / houses.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "61be96e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9996612521522169"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The proportion of houses that have 8 bathrooms and less\n",
+    "\n",
+    "houses[houses.bathroomcnt <= 9].shape[0] / houses.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "862f34d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9999551451125694"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The proportion of houses that have 20_000 indoor_squarefeet and less\n",
+    "\n",
+    "houses[houses.indoor_squarefeet <= 20_000].shape[0] / houses.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8d9a88b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "231945.62822916664"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Mean of tax value of houses corresponding to more than 18_000 sqft\n",
+    "\n",
+    "houses[houses.indoor_squarefeet > 20_000].taxamount.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "bd088bdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9998981420264597"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The proportion of houses that have tax value <= 18893736\n",
+    "\n",
+    "houses[houses.taxamount <= 231946].shape[0] / houses.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a16c9a3b",
+   "metadata": {},
+   "source": [
+    "## Takeaways\n",
+    "- The proportion obtained are still significant and won't denature the data\n",
+    "- I will filter the data through 8 bedrooms criterion its most restrictive one "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c8255026",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bedroomcnt</th>\n",
+       "      <th>bathroomcnt</th>\n",
+       "      <th>indoor_squarefeet</th>\n",
+       "      <th>taxvalue</th>\n",
+       "      <th>yearbuilt</th>\n",
+       "      <th>taxamount</th>\n",
+       "      <th>fips</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3633</td>\n",
+       "      <td>296425</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>6941.39</td>\n",
+       "      <td>6037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1620</td>\n",
+       "      <td>847770</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>10244.94</td>\n",
+       "      <td>6037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2077</td>\n",
+       "      <td>646760</td>\n",
+       "      <td>1926</td>\n",
+       "      <td>7924.68</td>\n",
+       "      <td>6037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>5328</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>91.60</td>\n",
+       "      <td>6037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>171</td>\n",
+       "      <td>6920</td>\n",
+       "      <td>1973</td>\n",
+       "      <td>255.17</td>\n",
+       "      <td>6037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2152856</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4375</td>\n",
+       "      <td>422400</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>13877.56</td>\n",
+       "      <td>6037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2152858</th>\n",
+       "      <td>4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2262</td>\n",
+       "      <td>960756</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>13494.52</td>\n",
+       "      <td>6059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2152859</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>3127</td>\n",
+       "      <td>536061</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>6244.16</td>\n",
+       "      <td>6059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2152861</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>424353</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>5302.70</td>\n",
+       "      <td>6059</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2152862</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2110</td>\n",
+       "      <td>554009</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>6761.20</td>\n",
+       "      <td>6037</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2139748 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         bedroomcnt  bathroomcnt  indoor_squarefeet  taxvalue  yearbuilt  \\\n",
+       "4                 4          2.0               3633    296425       2005   \n",
+       "6                 3          4.0               1620    847770       2011   \n",
+       "7                 3          2.0               2077    646760       1926   \n",
+       "11                0          0.0               1200      5328       1972   \n",
+       "14                0          0.0                171      6920       1973   \n",
+       "...             ...          ...                ...       ...        ...   \n",
+       "2152856           4          4.0               4375    422400       2015   \n",
+       "2152858           4          3.0               2262    960756       2015   \n",
+       "2152859           4          4.5               3127    536061       2014   \n",
+       "2152861           3          2.5               1974    424353       2015   \n",
+       "2152862           4          4.0               2110    554009       2014   \n",
+       "\n",
+       "         taxamount  fips  \n",
+       "4          6941.39  6037  \n",
+       "6         10244.94  6037  \n",
+       "7          7924.68  6037  \n",
+       "11           91.60  6037  \n",
+       "14          255.17  6037  \n",
+       "...            ...   ...  \n",
+       "2152856   13877.56  6037  \n",
+       "2152858   13494.52  6059  \n",
+       "2152859    6244.16  6059  \n",
+       "2152861    5302.70  6059  \n",
+       "2152862    6761.20  6037  \n",
+       "\n",
+       "[2139748 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "houses = houses[houses.bedroomcnt <= 8]\n",
+    "houses"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30dbde96",
+   "id": "5e9b21e8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Compiling the code for preparing my data\n",
+    "\n",
+    "# Dropping null values\n",
+    "houses = properties_2017.dropna(axis = 0, how ='any')\n",
+    "\n",
+    "# Dropping a column\n",
+    "houses = houses.drop(['propertylandusetypeid'], axis = 1)\n",
+    "\n",
+    "# Renaming columns\n",
+    "cols_to_rename = {\n",
+    "    'calculatedfinishedsquarefeet': 'indoor_squarefeet',\n",
+    "    'taxvaluedollarcnt': 'taxvalue',\n",
+    "}\n",
+    "\n",
+    "houses = houses.rename(columns=cols_to_rename)\n",
+    "\n",
+    "# Converting the following columns to int\n",
+    "\n",
+    "houses[\"bedroomcnt\"] = houses[\"bedroomcnt\"].astype(int)\n",
+    "houses[\"indoor_squarefeet\"] = houses[\"indoor_squarefeet\"].astype(int)\n",
+    "houses[\"taxvalue\"] = houses[\"taxvalue\"].astype(int)\n",
+    "houses[\"yearbuilt\"] = houses[\"yearbuilt\"].astype(int)\n",
+    "houses[\"fips\"] = houses[\"fips\"].astype(int)\n",
+    "\n",
+    "houses = houses[houses.bedroomcnt <= 8]\n",
+    "houses"
+   ]
   }
  ],
  "metadata": {
