--- a/scaling_exercises.ipynb
+++ b/scaling_exercises.ipynb
@@ -1,9 +1,212 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f02cbebb",
+   "metadata": {},
+   "source": [
+    "# Scaling Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a305f52e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.stats\n",
+    "import sklearn.preprocessing\n",
+    "\n",
+    "import os\n",
+    "import wrangle\n",
+    "from env import host, user, password\n",
+    "from scipy import stats\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "55c0ea98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "houses = wrangle.wrangle_zillow()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "927a2251",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bedroomcnt</th>\n",
+       "      <th>bathroomcnt</th>\n",
+       "      <th>indoor_squarefeet</th>\n",
+       "      <th>taxvalue</th>\n",
+       "      <th>yearbuilt</th>\n",
+       "      <th>taxamount</th>\n",
+       "      <th>fips</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3633</td>\n",
+       "      <td>296425</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>6941.39</td>\n",
+       "      <td>6037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1620</td>\n",
+       "      <td>847770</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>10244.94</td>\n",
+       "      <td>6037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2077</td>\n",
+       "      <td>646760</td>\n",
+       "      <td>1926</td>\n",
+       "      <td>7924.68</td>\n",
+       "      <td>6037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>5328</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>91.60</td>\n",
+       "      <td>6037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>171</td>\n",
+       "      <td>6920</td>\n",
+       "      <td>1973</td>\n",
+       "      <td>255.17</td>\n",
+       "      <td>6037</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    bedroomcnt  bathroomcnt  indoor_squarefeet  taxvalue  yearbuilt  \\\n",
+       "4            4          2.0               3633    296425       2005   \n",
+       "6            3          4.0               1620    847770       2011   \n",
+       "7            3          2.0               2077    646760       1926   \n",
+       "11           0          0.0               1200      5328       1972   \n",
+       "14           0          0.0                171      6920       1973   \n",
+       "\n",
+       "    taxamount  fips  \n",
+       "4     6941.39  6037  \n",
+       "6    10244.94  6037  \n",
+       "7     7924.68  6037  \n",
+       "11      91.60  6037  \n",
+       "14     255.17  6037  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "houses.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2f6caafa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_validate_test_split(houses, seed=175):\n",
+    "    '''\n",
+    "    This function takes in a dataframe (DF) and an integer for setting a seed\n",
+    "    and splits the data into train, validate and test. \n",
+    "    Test is 20% of the original dataset, validate is .30*.80= 24% of the \n",
+    "    original dataset, and train is .70*.80= 56% of the original dataset. \n",
+    "    The function returns train, validate and test DF. \n",
+    "    '''\n",
+    "    train_validate, test = train_test_split(df, test_size=0.2, \n",
+    "                                            random_state=seed)\n",
+    "    train, validate = train_test_split(train_validate, test_size=0.3, \n",
+    "                                       random_state=seed)\n",
+    "    return train, validate, test\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ac3712e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/5k/zptdym41293159jft7y2b6cm0000gp/T/ipykernel_65502/3331524160.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx_train_and_validate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m175\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_validate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_train_and_validate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "train, validate, test = train_validate_test_split(houses)\n",
+    "train"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc79e5b8",
+   "id": "6b57ae6c",
    "metadata": {},
    "outputs": [],
    "source": []
