--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f6196c52",
+   "id": "6856d4c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9b7e1383",
+   "id": "949368d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad853aa0",
+   "id": "43f1d1b3",
    "metadata": {},
    "source": [
     "# <font color=“brown”>Goal</font>\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f33e7325",
+   "id": "359170bb",
    "metadata": {},
    "source": [
     "# Acquisition"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "15afcb0b",
+   "id": "2db2b2fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5e48b09",
+   "id": "5099ee65",
    "metadata": {},
    "source": [
     "**The columns I need**\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f4656709",
+   "id": "5be638d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5eb69705",
+   "id": "2d194e64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,9 +136,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "567514b9",
+   "id": "a33cab72",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -261,8 +261,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "2b772f9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "properties_2017.to_csv('/Users/arsen/codeup-data-science/regression_exercises/properties_2017.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "774355f4",
+   "id": "6cc73e68",
    "metadata": {},
    "source": [
     "# Cleaning"
@@ -271,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cb0d0dc6",
+   "id": "9d33f792",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6b1bc9ff",
+   "id": "6fdcc00a",
    "metadata": {
     "scrolled": true
    },
@@ -338,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4290f8d0",
+   "id": "bcf57711",
    "metadata": {
     "scrolled": true
    },
@@ -371,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0a9ef40b",
+   "id": "ae9d78cd",
    "metadata": {
     "scrolled": false
    },
@@ -505,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d4e91c7a",
+   "id": "398c93db",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5340a0fd",
+   "id": "4bb06b9a",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5269c98e",
+   "id": "a7e88f85",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e8bc1a5b",
+   "id": "a45b44de",
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "624bbd2f",
+   "id": "82e58ac1",
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "14d7c1b3",
+   "id": "e1bbeb78",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "c957455b",
+   "id": "7893b892",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e0b8a4e",
+   "id": "de227e90",
    "metadata": {},
    "source": [
     "## Takeaways\n",
@@ -765,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e954410",
+   "id": "b33e49a2",
    "metadata": {},
    "source": [
     "**Description of columns**\n",
@@ -796,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2b181973",
+   "id": "a2d1d77d",
    "metadata": {
     "scrolled": true
    },
@@ -824,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "212b6fa5",
+   "id": "51926234",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "cec05968",
+   "id": "7e24d71b",
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2d89a4e4",
+   "id": "bcccd62d",
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "11336ade",
+   "id": "73390657",
    "metadata": {
     "scrolled": true
    },
@@ -1249,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "74da486a",
+   "id": "b5c97889",
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a31b58b5",
+   "id": "e5d31dff",
    "metadata": {},
    "outputs": [
     {
@@ -1491,7 +1501,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a2808205",
+   "id": "faf126d4",
    "metadata": {},
    "outputs": [
     {
@@ -1519,7 +1529,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "3df683b2",
+   "id": "2a524de1",
    "metadata": {
     "scrolled": false
    },
@@ -1669,7 +1679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5d64501",
+   "id": "a8ddb9aa",
    "metadata": {},
    "source": [
     "## Takeaways\n",
@@ -1685,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "6d71eed4",
+   "id": "b772488b",
    "metadata": {},
    "outputs": [
     {
@@ -1708,7 +1718,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "61be96e0",
+   "id": "dd5dd06c",
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "862f34d1",
+   "id": "104b65cd",
    "metadata": {},
    "outputs": [
     {
@@ -1754,7 +1764,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8d9a88b1",
+   "id": "44345638",
    "metadata": {},
    "outputs": [
     {
@@ -1777,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "bd088bdd",
+   "id": "e8deaede",
    "metadata": {},
    "outputs": [
     {
@@ -1799,7 +1809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a16c9a3b",
+   "id": "e4664c99",
    "metadata": {},
    "source": [
     "## Takeaways\n",
@@ -1810,7 +1820,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "c8255026",
+   "id": "636b9c1f",
    "metadata": {
     "scrolled": false
    },
@@ -1997,6 +2007,8 @@
     }
    ],
    "source": [
+    "# Filtering the data through number of bedrooms\n",
+    "\n",
     "houses = houses[houses.bedroomcnt <= 8]\n",
     "houses"
    ]
@@ -2004,7 +2016,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e9b21e8",
+   "id": "aa8be82a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2025,13 +2037,13 @@
     "houses = houses.rename(columns=cols_to_rename)\n",
     "\n",
     "# Converting the following columns to int\n",
-    "\n",
     "houses[\"bedroomcnt\"] = houses[\"bedroomcnt\"].astype(int)\n",
     "houses[\"indoor_squarefeet\"] = houses[\"indoor_squarefeet\"].astype(int)\n",
     "houses[\"taxvalue\"] = houses[\"taxvalue\"].astype(int)\n",
     "houses[\"yearbuilt\"] = houses[\"yearbuilt\"].astype(int)\n",
     "houses[\"fips\"] = houses[\"fips\"].astype(int)\n",
     "\n",
+    "# Filtering the data through number of bedrooms\n",
     "houses = houses[houses.bedroomcnt <= 8]\n",
     "houses"
    ]
